# adapters_can_monitor_lies

./: .gitignore  README.md  justfile  pyproject.toml  research_log.md
adapter_overseer/: config.py
adapter_overseer/helpers/: ds.py  scores.py  select.py  torch_helpers.py
adapter_overseer/prompts/: prompt_loading.py
adapter_overseer/prompts/templates/: system.yaml
adapter_overseer/prompts/templates/prompt_formats/: alpaca.jinja2  default.jinja  mixtral.jinja2  phi.jinja2  readme.md  vicuna.jinja2
adapter_overseer/train/: pl_lora_ft.py
nbs/: 01_select.ipynb  mjc_001_EDA.ipynb  mjc_001_baukit.ipynb  mjc_001_hf_lightning_fail.ipynb  mjc_001_hs.ipynb  mjc_002_diff_hs lightnign.ipynb  mjc_002_diff_hs.ipynb  mjc_002_diff_hs_gen.ipynb  mjc_002_diff_hs_redirect.ipynb  mjc_003_diff_hs_redirect_8bit.ipynb  mjc_003_diff_hs_redirect_8bit_TODO.ipynb  mjc_003_hs.ipynb  mjc_004_diff_hs_redirect_no_detach.ipynb
